--- a/lettrip-backend/.gitignore
+++ b/lettrip-backend/.gitignore
@@ -1,5 +1,4 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,gradle
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,gradle
+
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -142,4 +141,4 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
-# End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,gradle
+# End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all
