#1- application.properties > MySql 설정 추가

--- a/lettrip-backend/src/main/resources/application.properties
+++ b/lettrip-backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+# mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://database-1.ckcq1eotvdmv.ap-northeast-2.rds.amazonaws.com:3306/lettrip
+spring.datasource.username=admin
+spring.datasource.password=lettrip123
+spring.jpa.show-sql=true
+#  create : ?? ??? ??? ?? ???? / update : ??? ??? ?? alter? ???? ???? ???? create? ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
