properties -> yml 파일로 변경
application.properties를 application.yml 파일로 변경하였다.

--- a/lettrip-backend/.gitignore
+++ b/lettrip-backend/.gitignore
@@ -141,4 +141,7 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+### custom
+application.yml
+
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all
