--- a/lettrip-backend/build.gradle
+++ b/lettrip-backend/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
 	implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '6.1.7.Final'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 
